--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
   "name": "travel-site",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
+    "clear": "^0.1.0",
     "jquery": "^2.2.3",
     "normalize.css": "^4.1.1"
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^8.5.0",
+    "browser-sync": "^2.24.4",
+    "gulp": "^3.9.1",
+    "gulp-postcss": "^7.0.1",
+    "gulp-watch": "^5.0.0",
+    "postcss-import": "^11.1.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-simple-vars": "^4.1.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stephendoyin/travel-site.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/stephendoyin/travel-site/issues"
+  },
+  "homepage": "https://github.com/stephendoyin/travel-site#readme"
 }
